<resources>
    <string name="app_name">OfflineStorage</string>
    <string name="pick_option_label">Pick an option from the options menu</string>

    <string name="action_settings">Settings</string>
    <string name="action_shared_preferences">Shared Preferences</string>
    <string name="action_internal_storage">Internal Storage</string>
    <string name="action_encrypted_internal_storage">Encrypted Internal Storage</string>
    <string name="action_external_storage">External Storage</string>
    <string name="action_sql_lite">Sql Lite</string>
    <string name="action_sql_cipher">Sql Cipher</string>
    <string name="action_sql_cipher_fragments">Sql Cipher fragments</string>
    <string name="action_sql_cipher_fragments_jni">Sql Cipher fragments JNI</string>
    <string name="action_tamper_detection">Tamper detection</string>
    <string name="action_device_specific_key">Device specific key</string>

    <!-- String values for PreferenceActivity-->
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>

    <!-- String values for InternalStorageActivity -->
    <string name="private_key_label">Private field</string>
    <string name="save_settings_button">Save Settings</string>

    <!-- String values for offlineStorageActivity -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="save_in_database">Save In Database</string>

    <!-- String values for DbLoginFragment -->
    <string name="login_button">Login</string>

    <!-- String values for TamperDetectionActivity-->
    <string name="installed_through_play_store">Is installed through play store</string>
    <string name="is_debuggable">Is debuggable</string>
    <string name="runs_on_emulator">Is running on emulator</string>
    <string name="is_rooted">Is rooted</string>

    <!-- String values for DeviceSpecificKeyActivity -->
    <string name="device_specific_key_label">Device specific key</string>

    <string-array name="storage_array">
        <item>Shared preferences</item>
        <item>Internal storage</item>
        <item>External storage</item>
        <item>SqlLite</item>
    </string-array>
    <string name="title_activity_internal_storage">InternalStorageActivity</string>
    <string name="title_activity_shared_preferences">SharedPreferencesActivity</string>
    <string name="title_activity_external_storage">ExternalStorageActivity</string>
    <string name="title_activity_sql_lite">SqlLiteActivity</string>
    <string name="title_activity_encrypted_sql_lite">EncryptedSqlLiteActivity</string>
    <string name="title_activity_sql_cipher">SqlCipherActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="introduction">
        <b>Introduction</b> \n \n
        This app is a sample app which contains code samples for storing offline content in Android. \n \n
        There is a drawer which you can slide out from the left which contains a bunch of menu items \n
        containing simple screens that demonstrate some of these offline storage solutions.

        The source code can be found on: https://github.com/SteveDZ/OfflineStorage.git
        The relevant parts of the code can be found in the fragments and utils packages.
    </string>
    <string name="title_activity_sql_cipher_activity_with_login">SqlCipherActivityWithLogin</string>
    <string name="title_activity_sql_cipher_activity_with_native_interface">
        SqlCipherActivityWithNativeInterface
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tamper_detection">TamperDetectionActivity</string>
    <string name="title_activity_device_specific_key">DeviceSpecificKeyActivity</string>
    <string name="title_activity_encrypted_internal_storage">EncryptedInternalStorageActivity
    </string>
</resources>
