<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.ordina.offlinestorage.activity.SqlLiteActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/first_name" android:layout_width="100dp"
            android:layout_height="wrap_content" android:textSize="18sp" />

        <EditText
            android:id="@+id/first_name_field"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/last_name" android:layout_width="100dp"
            android:layout_height="wrap_content" android:textSize="18sp" />

        <EditText
            android:id="@+id/last_name_field"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/email" android:layout_width="100dp"
            android:layout_height="wrap_content" android:textSize="18sp" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/save_in_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_in_database"/>

</LinearLayout>
