<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.ordina.offlinestorage.fragment.TamperDetectionFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/installed_through_play_store" android:layout_width="220dp"
            android:layout_height="wrap_content" android:textSize="16sp"/>
        <TextView android:id="@+id/is_installed_through_play_store" android:text="" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="16sp" />
    </LinearLayout>/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/is_debuggable" android:layout_width="220dp"
            android:layout_height="wrap_content"  android:textSize="16sp" />
        <TextView android:id="@+id/is_debuggable" android:text="" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/runs_on_emulator" android:layout_width="220dp"
            android:layout_height="wrap_content" android:textSize="16sp"/>
        <TextView android:id="@+id/is_running_on_emulator" android:text="" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/is_rooted" android:layout_width="220dp"
            android:layout_height="wrap_content" android:textSize="16sp"/>
        <TextView android:id="@+id/is_rooted" android:text="" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>
